--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ body, html {
 #111;
     width: 250px;
     padding: 20px;
-    box-shadow: 4px 0 10px 
-rgba(0, 0, 0, 0.3);
     box-sizing: border-box;
+    box-shadow: 2px 0 5px 
+rgba(0, 0, 0, 0.1);
 }
 
 .sidebar img.profile-pic {
@@ -35,7 +35,7 @@ rgba(0, 0, 0, 0.3);
 .sidebar h2, .sidebar ul {
     text-align: center;
 }
-    
+
 .sidebar ul {
     list-style-type: none;
     padding: 0;
@@ -43,7 +43,20 @@ rgba(0, 0, 0, 0.3);
 
 .sidebar li {
     margin: 10px 0;
+}
+
+.sidebar button {
+    width: 100%;
+    padding: 10px;
+    background-color: 
+#eaeaea;
+    border: none;
     cursor: pointer;
+}
+
+.sidebar button:hover {
+    background-color: 
+#d4d4d4;
 }
 
 .terminal {
@@ -58,6 +71,8 @@ rgba(0, 0, 0, 0.3);
     justify-content: flex-end;
     overflow: hidden;
     box-sizing: border-box;
+    box-shadow: -2px 0 5px 
+rgba(0, 0, 0, 0.1);
 }
 
 .output {
@@ -89,7 +104,7 @@ input[type="text"] {
 @media (max-width: 768px) {
     .sidebar {
         width: 100%;
-        height: 150px;
+        height: auto;
         box-shadow: none;
     }
     .container {
