--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative; /* Make body the reference position */
 }
 
 .terminal {
